--- a/twitterune.user.css
+++ b/twitterune.user.css
@@ -5,6 +5,9 @@
 @description  Twitter, styled like the "Deltarune" JRPG.
 @author       zulc22
 @license      0BSD
+@updateURL    https://github.com/zulc22/Twitterune/raw/main/twitterune.user.css
+@homepageURL  https://github.com/zulc22/Twitterune
+@supportURL   https://github.com/zulc22/Twitterune/issues
 ==/UserStyle== */
 
 @-moz-document domain("twitter.com") {
