minor change, change the name so userstyles keeps the name

--- a/twitterune.user.css
+++ b/twitterune.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
-@name         Deltwitter
-@version      20221014.1
+@name         Twitterune
+@version      20221014.2
 @namespace    userstyles.world/user/zulc22
 @description  Twitter, styled like the "Deltarune" RPG.
 @author       zulc22
